# tvarminne-trajectory-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: lab_diary_06_12_2026.md  lab_diary_06_16_2026.md
plots/: README.md
scripts/: check_trajectory_direction.py  concentrations.py  consts.py  eda.py  grid.py  mat_io.py  plot_cf.py  plot_map.py  plot_map_old.py  plot_monthly_trajectory_anomalies.py  plot_pscf.py  trajectories.py
src/tvarminne_trajectory_analysis/: concentrations.py  grid.py  mat_io.py  plot_map.py  trajectories.py
